# oidc-provider

./: README.md  pyproject.toml
oidc_provider/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
oidc_provider/lib/: claims.py
oidc_provider/lib/endpoints/: authorize.py  introspection.py  token.py
oidc_provider/lib/utils/: authorize.py  common.py  oauth2.py  token.py
oidc_provider/management/commands/: creatersakey.py
oidc_provider/migrations/: 0001_initial.py  0002_userconsent.py  0003_code_nonce.py  0005_token_refresh_token.py  0007_auto_20160111_1844.py  0016_userconsent_and_verbosenames.py  0023_client_owner.py  0025_user_field_codetoken.py
oidc_provider/tests/app/: urls.py  utils.py
oidc_provider/tests/cases/: test_authorize_endpoint.py  test_claims.py  test_end_session_endpoint.py  test_introspection_endpoint.py  test_middleware.py  test_provider_info_endpoint.py  test_token_endpoint.py  test_userinfo_endpoint.py  test_utils.py
