[tool.poetry]
name = "drizm-oidc-provider"
version = "0.1.0"
description = ""
authors = ["ThaRising <kochbe.ber@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodomex = "^3.9.9"
python-jose = "^3.2.0"
Django = "3.1.1"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
